Fix stuck view bug and add migration script to clear settings

--- a/styles.css
+++ b/styles.css
@@ -1032,11 +1032,12 @@ footer {
   background: var(--bg-component); /* Footer also gets light blue tint background */
 }
 
-footer a.view-toggle-link {
+footer a.view-toggle-link, footer a.view-reset-link {
   color: var(--navy);
   text-decoration: none;
   font-weight: 700;
   margin-left: 8px;
+  margin-right: 8px;
   text-transform: uppercase;
   font-size: 12px;
 }
